# traffic-monitor

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.sh  install.sh  run.sh  test_api.sh  traffic-monitor.service
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: traffic_data.json
docs/: CHANGELOG.md  netlink_vs_procfs_comparison.md  netns_collection.md  test_setns_read_dev  test_setns_read_dev.c
monitor/: traffic_monitor.sh
server/: http_server.py  init_db.py
src/: aggregation.rs  collector.rs  database.rs  main.rs  models.rs  netlink_client.rs  netns.rs  server.rs
tests/: sqlite_performance.rs
web/: index.html
