[package]
name = "traffic-monitor"
version = "1.0.0"
edition = "2021"
authors = ["Traffic Monitor Team"]
description = "High-performance network traffic monitoring system"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"
actix-files = "0.6"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async stream
async-stream = "0.3"
futures-util = "0.3"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# System utilities
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Musl static linking profile (for CentOS 7.6 compatibility)
[profile.release-musl]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "traffic-monitor"
path = "src/main.rs"
